--- a/essentials/datasets.mdx
+++ b/essentials/datasets.mdx
@@ -1,7 +1,7 @@
 ---
-title: 'Markdown Syntax'
-description: 'Text, title, and styling in standard markdown'
-icon: 'text-size'
+title: "Datasets"
+description: "Text, title, and styling in standard markdown"
+icon: "text-size"
 ---
 
 ## Titles
