--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,70 +1,40 @@
 ---
 title: Introduction
-description: 'Welcome to the home of your new documentation'
+description: "Welcome to the Flex AI"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.svg"
-  alt="Hero Light"
-/>
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.svg"
-  alt="Hero Dark"
-/>
+👋 Welcome to the Flex AI docs! Flex AI makes it easy to run or fine-tune leading open source models with only a few lines of code.
 
-## Setting up
+## Start training today
 
-The first step to world-class documentation is setting up your editing environments.
+Check out our guides options
 
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
-    icon="pen-to-square"
-    href="https://mintlify.com/docs/quickstart"
-  >
-    Get your docs set up locally for easy development
-  </Card>
-  <Card
-    title="Preview Changes"
-    icon="image"
-    href="https://mintlify.com/docs/development"
-  >
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
-
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-  <Card
-    title="Customize Style"
+    title="Python SDK"
     icon="palette"
-    href="https://mintlify.com/docs/settings/global"
+    href="https://docs.getflex.ai/quickstart"
   >
-    Customize your docs to your company's colors and brands
+    Upload Datasets, create Fine Tunes
   </Card>
   <Card
     title="Reference APIs"
     icon="code"
-    href="https://mintlify.com/docs/api-playground/openapi"
+    href="https://mintlify.com/quickstart"
   >
-    Automatically generate endpoints from an OpenAPI spec
+    Get Live Updates, Download , Train and Serve models
   </Card>
   <Card
-    title="Add Components"
+    title="CLI SDK"
     icon="screwdriver-wrench"
-    href="https://mintlify.com/docs/components/accordion"
+    href="https://docs.getflex.ai/quickstart"
   >
-    Build interactive features and designs to guide your users
+    Upload Datasets, create Fine Tunes
   </Card>
   <Card
     title="Get Inspiration"
     icon="stars"
-    href="https://mintlify.com/customers"
+    href="https://docs.getflex.ai/quickstart"
   >
     Check out our showcase of our favorite documentation
   </Card>
