--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,86 +1,87 @@
 ---
-title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+title: "Quickstart"
+description: "Start training in under 5 minutes"
 ---
 
-## Setup your development
+## Register for an account
 
-Learn how to update your docs locally and and deploy them to the public.
+First, [register for an account](https://app.getflex.ai/auth) to get an API key. New accounts come with $5 to get started.
 
-### Edit and preview
+Once you've registered, go to [settings](https://app.getflex.ai/settings) and find your api key:
 
-<AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
-  </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `mint.json` is): ``` mintlify dev ```
-  </Accordion>
-</AccordionGroup>
+<Info>
+  **Prerequisite** You should have installed Node.js (version 18.10.0 or
+  higher).
+</Info>
 
-### Deploy your changes
+Step 1. Install Flex AI on your OS:
 
-<AccordionGroup>
+<CodeGroup>
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+```bash python
+pip install flex_ai
+```
 
-</AccordionGroup>
+</CodeGroup>
 
-## Update your docs
+Step 2. Init your flex_ai instance
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+```bash python
+client = FlexAI(api_key="API_KEY")
+```
 
-<CardGroup>
+### Upload your first Dataset
 
-<Card title="Style Your Docs" icon="paintbrush" href="/settings/global">
-  Add flair to your docs with personalized branding.
-</Card>
+In FlexAI, there are 3 types of Datasets:
 
-<Card
-  title="Add API Endpoints"
-  icon="square-code"
-  href="/api-playground/configuration"
->
-  Implement your OpenAPI spec and enable API user interaction.
-</Card>
+1. instruction
+2. chat
+3. text
 
-<Card
-  title="Integrate Analytics"
-  icon="chart-mixed"
-  href="/analytics/supported-integrations"
->
-  Draw insights from user interactions with your documentation.
-</Card>
+You can read more about them in [Datasets tutorial](https://app.getflex.ai/datasets)
+For now we will go with an instruction dataset.
+A datasets will have two .jsonl files, one for train and one for eval (evak is optional but recommended)
 
-<Card
-  title="Host on a Custom Domain"
-  icon="browser"
-  href="/settings/custom-domain/subdomain"
->
-  Keep your docs on your own website's subdomain.
-</Card>
+For example:
+create a train.jsonl file:
 
-</CardGroup>
+```bash train.jsonl
+{"instruction": "Some important task with context ?", "output": "Boo" }
+{"instruction": "Some important task with context ?", "output": "Boo" }
+{"instruction": "Some important task with context ?", "output": "Boo" }
+```
+
+```bash python
+client = FlexAI(api_key="API_KEY")
+dataset = client.create_dataset("API Dataset New",
+                               "instruction/train.jsonl",
+                               "instruction/eval.jsonl",
+                                DatasetType.INSTRUCTION)
+```
+
+You will get back a dataset id to use for run fine tunning
+
+## Train
+
+You view all our models in the [Models Page](https://app.getflex.ai/models)
+
+<CodeGroup>
+
+```bash python
+client.create_finetune(name="My Task New",
+                       dataset_id=dataset["id"],
+                       model="TinyLlama/TinyLlama-1.1B-step-50K-105b",
+                       n_epochs=5,
+                       train_with_lora=True,
+                       lora_config={"lora_r": 64, "lora_alpha": 8, "lora_dropout": 0.1},
+                       n_checkpoints_and_evaluations_per_epoch=1
+                      #  batch_size=4, learning_rate=0.0001, n_checkpoints_and_evaluations_per_epoch=1,
+                      #  save_only_best_checkpoint=True, train_with_lora=True,
+                      #  lora_config={"lora_r": 64, "lora_alpha": 8, "lora_dropout": 0.1},
+                      #  early_stopping_config={"patience": 1, "threshold": 0.1}
+                       )
+```
+
+</CodeGroup>
+
+You view all our models in the [Models Page](https://app.getflex.ai/models)
