--- a/introduction.mdx
+++ b/introduction.mdx
@@ -10,32 +10,16 @@ description: "Welcome to the Flex AI"
 Check out our guides options
 
 <CardGroup cols={2}>
-  <Card
-    title="Python SDK"
-    icon="palette"
-    href="https://docs.getflex.ai/quickstart"
-  >
+  <Card title="Python SDK" icon="palette" href="/quickstart">
     Upload Datasets, create Fine Tunes
   </Card>
-  <Card
-    title="Reference APIs"
-    icon="code"
-    href="https://mintlify.com/quickstart"
-  >
+  <Card title="Reference APIs" icon="code" href="/quickstart">
     Get Live Updates, Download , Train and Serve models
   </Card>
-  <Card
-    title="CLI SDK"
-    icon="screwdriver-wrench"
-    href="https://docs.getflex.ai/quickstart"
-  >
+  <Card title="CLI SDK" icon="screwdriver-wrench" href="/quickstart">
     Upload Datasets, create Fine Tunes
   </Card>
-  <Card
-    title="Get Inspiration"
-    icon="stars"
-    href="https://docs.getflex.ai/quickstart"
-  >
+  <Card title="Get Inspiration" icon="stars" href="/quickstart">
     Check out our showcase of our favorite documentation
   </Card>
 </CardGroup>
