--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,7 +3,8 @@ title: Introduction
 description: "Welcome to the Flex AI"
 ---
 
-👋 Welcome to the Flex AI docs! Flex AI makes it easy to run or fine-tune leading open source models with only a few lines of code.
+👋 Welcome to the Flex AI docs! Flex AI makes it easy for any developer to fine-tune leading open source models with only a few lines of code.
+You dont have to care about prompt templates or python code
 
 ## Start training today
 
@@ -13,13 +14,13 @@ Check out our guides options
   <Card title="Python SDK" icon="palette" href="/quickstart">
     Upload Datasets, create Fine Tunes
   </Card>
-  <Card title="Reference APIs" icon="code" href="/quickstart">
+  <Card title="Reference APIs" icon="code" href="/api-reference/introduction">
     Get Live Updates, Download , Train and Serve models
   </Card>
   <Card title="CLI SDK" icon="screwdriver-wrench" href="/quickstart">
     Upload Datasets, create Fine Tunes
   </Card>
-  <Card title="Get Inspiration" icon="stars" href="/quickstart">
-    Check out our showcase of our favorite documentation
+  <Card title="Concepts" icon="stars" href="/quickstart">
+    Learn about Flex AI concepts
   </Card>
 </CardGroup>
