--- a/introduction.mdx
+++ b/introduction.mdx
@@ -20,7 +20,7 @@ Check out our guides options
   <Card title="CLI SDK" icon="screwdriver-wrench" href="/quickstart">
     Upload Datasets, create Fine Tunes
   </Card>
-  <Card title="Concepts" icon="stars" href="/quickstart">
+  <Card title="Concepts" icon="stars" href="/core-concepts/datasets">
     Learn about Flex AI concepts
   </Card>
 </CardGroup>
