--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -10,7 +10,8 @@ First, [register for an account](https://app.getflex.ai/sign-up) to get an API k
 Once you've registered, go to [settings](https://app.getflex.ai/settings/api-keys) and find your api key:
 
 <Info>
-  **Prerequisite** You should have installed Python (version 3 or higher).
+  **Watch our Full Demo Video** You can watch our full demo
+  [here](https://www.loom.com/share/f352c51358ba41398b755b6f49f97d5b).
 </Info>
 
 Step 1. Install Flex AI on your OS:
