--- a/guides/connect-your-storage.mdx
+++ b/guides/connect-your-storage.mdx
@@ -48,12 +48,12 @@ This guide will walk you through the process of connecting your AWS S3 bucket to
     {
       "Effect": "Allow",
       "Action": ["s3:ListBucket", "s3:GetBucketLocation"],
-      "Resource": ["arn:aws:s3:::your_bucket_name"]
+      "Resource": ["arn:aws:s3:::yourbucketname"]
     },
     {
       "Effect": "Allow",
       "Action": ["s3:PutObject", "s3:GetObject", "s3:DeleteObject"],
-      "Resource": ["arn:aws:s3:::your_bucket_name/*"]
+      "Resource": ["arn:aws:s3:::yourbucketname/*"]
     }
   ]
 }
