--- a/guides/connect-your-storage.mdx
+++ b/guides/connect-your-storage.mdx
@@ -7,6 +7,11 @@ description: Step-by-step guide to connect your AWS S3 bucket to FlexAI
 
 This guide will walk you through the process of connecting your AWS S3 bucket to FlexAI. We currently support only AWS S3 for storage integration.
 
+<Info>
+  **Watch our Full tutorial Video** You can watch our full tutorial
+  [here](https://www.loom.com/share/ecf83ed0755044a6b50a3dfda20fceb6).
+</Info>
+
 ## Step 1: Create an IAM User
 
 1. Log in to your AWS Management Console.
