--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -13,6 +13,10 @@ Once you've registered, go to [settings](https://app.getflex.ai/settings/api-key
   **Watch our Full Demo Video** You can watch our full demo
   [here](https://www.loom.com/share/f352c51358ba41398b755b6f49f97d5b).
 </Info>
+<Info>
+  **Google Colab** example
+  [here](https://colab.research.google.com/drive/1nSFRjrHpbz372h7W-2G7jmTuh_Dhiv9x?authuser=2#scrollTo=RiXPwLmHBOCV).
+</Info>
 
 Step 1. Install Flex AI on your OS:
 
@@ -29,6 +33,7 @@ Step 2. Init your flex_ai instance
 <CodeGroup>
 
 ```bash Python
+from flex_ai import FlexAI
 client = FlexAI(api_key="xxxxxx")
 ```
 
@@ -106,15 +111,15 @@ You can also send fine tune directly from the [Dashboard](https://app.getflex.ai
 <CodeGroup>
 
 ```bash Python
-client.create_finetune(name="My Task New",
+task = client.create_finetune(name="My Task New",
                        dataset_id=dataset["id"],
-                       model="TinyLlama/TinyLlama-1.1B-step-50K-105b",
+                       model="meta-llama/Llama-3.2-1B-Instruct",
                        n_epochs=5,
                        train_with_lora=True,
                        lora_config={"lora_r": 64, "lora_alpha": 8, "lora_dropout": 0.1},
                        n_checkpoints_and_evaluations_per_epoch=1
                        batch_size=4, learning_rate=0.0001, n_checkpoints_and_evaluations_per_epoch=1,
-                       save_only_best_checkpoint=True, train_with_lora=True,
+                       save_only_best_checkpoint=False, train_with_lora=True,
                        lora_config={"lora_r": 64, "lora_alpha": 8, "lora_dropout": 0.1}
                       )
 ```
@@ -123,7 +128,7 @@ client.create_finetune(name="My Task New",
 flex_ai fine-tuning create \
   --name "Sample Fine-Tuning Task" \
   --dataset-id "62bf5ae8-bbba-438b-9564-36bc902ab393" \
-  --model "TinyLlama/TinyLlama_v1.1" \
+  --model "meta-llama/Llama-3.2-1B-Instruct" \
   --n-epochs 3 \
   --train-with-lora True \
   --n-checkpoints-and-evaluations-per-epoch 2 \
@@ -132,11 +137,55 @@ flex_ai fine-tuning create \
   --lora-dropout 0.1 \
   --batch-size 8 \
   --learning-rate 2e-5 \
-  --save-only-best-checkpoint True
+  --save-only-best-checkpoint False
 ```
 
 </CodeGroup>
 
 After you send the fine tuning task, you can view the training metrics on Weights and Biases.
 Also you can check the dashboard to see the price estimation for that task and decide if you want to cancel or not.
-Checkpoints will be created in parallel to the training.
+Checkpoints will be created in parallel to the training with CPU usage.
+You can check the training status at [Tasks Page](https://app.getflex.ai/tasks)
+
+## Notebook Example
+
+You can check the notebook example at [Google Colab](https://colab.research.google.com/drive/1nSFRjrHpbz372h7W-2G7jmTuh_Dhiv9x?authuser=2#scrollTo=RiXPwLmHBOCV)
+
+## Full Example
+
+```bash Python
+from flex_ai import FlexAI
+
+# Initialize the Flex AI client
+client = FlexAI(api_key="your_api_key_here")
+
+# Create a new dataset
+dataset = client.create_dataset(
+    "API Dataset New",
+    "instruction/train.jsonl",
+    "instruction/eval.jsonl"
+)
+
+# Start a fine-tuning task
+task = client.create_finetune(
+    name="My Task New",
+    dataset_id=dataset["id"],
+    model="TinyLlama/TinyLlama-1.1B-step-50K-105b",
+    n_epochs=5,
+    train_with_lora=True,
+    lora_config={
+        "lora_r": 64,
+        "lora_alpha": 8,
+        "lora_dropout": 0.1
+    },
+    n_checkpoints_and_evaluations_per_epoch=1,
+    batch_size=4,
+    learning_rate=0.0001,
+    save_only_best_checkpoint=True
+)
+
+# You can now monitor the task status and results through the Flex AI dashboard
+print(f"Fine-tuning task created with ID: {task['id']}")
+print("Check the Tasks Page for status updates: https://app.getflex.ai/tasks")
+
+```
