--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -170,7 +170,7 @@ dataset = client.create_dataset(
 task = client.create_finetune(
     name="My Task New",
     dataset_id=dataset["id"],
-    model="TinyLlama/TinyLlama-1.1B-step-50K-105b",
+    model="meta-llama/Llama-3.2-1B-Instruct",
     n_epochs=5,
     train_with_lora=True,
     lora_config={
