--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -5,7 +5,7 @@ description: "Start training in under 5 minutes"
 
 ## Register for an account
 
-First, [register for an account](https://app.getflex.ai/sign-up) to get an API key. New accounts come with $5 to get started.
+First, [register for an account](https://app.getflex.ai/sign-in) to get an API key. New accounts come with $5 to get started.
 
 Once you've registered, go to [settings](https://app.getflex.ai/settings/api-keys) and find your api key:
 
