--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,7 +3,7 @@ title: Introduction
 description: "Welcome to the Flex AI"
 ---
 
-👋 Welcome to the Flex AI docs! Flex AI makes it easy for any developer to fine-tune leading open source models with only a few lines of code.
+👋 Welcome to the Flex AI docs! Flex AI makes it easy for any developer to fine-tune and inference leading open source models with only a few lines of code.
 You dont have to care about prompt templates or python code
 
 ## Start training today
